--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,9 +5,11 @@ name: CI
 # Controls when the workflow will run
 on:
   push:
+  schedule:
+    - cron: '*/5 * * * *'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
+  
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
